testdata/valid/internal/domain/order/alias.go
package order

import "github.com/kimtaeyun/testproject-dc/internal/domain/order/app"

type Service = app.Service

var NewService = app.NewService
