testdata/invalid/internal/domain/order/core/svc/bad_svc.go
package svc

import _ "github.com/kimtaeyun/testproject-dc-invalid/internal/domain/order/core/repo"
